
  * Added last.fm as cover source in the cover download dialog
  * Added a lyric editor in the track editor
  * Added option to automatically save lyrics to mp3, flac, ogg, m4a files. 
    Also you can manually save it from the lyrics panel
  * Added an option in Preferences -> Playback to remove played tracks
  * Added print and copy to clipboard of lyrics
  * Enabled option to edit tracks from the player playlist
  * When some preferences are modified the settings are propagated where its needed
  * Fixed bug in smart play mode

2010-01-15 0.2.3
  * Added Random as a ordering method for dynamic playlists
  * Added a filter for the random or smart play mode so you can select a
    playlist for the Allow filter and another playlist for the deny filter.
    This way you can for example fix the genre or a label for the Smart
    added tracks from last.fm.
  * Fix bug when searching text with a ' in it
  * Fix 'Copy to...' when filenames contains reserved chars
  * Preferences dialog can be resized
  * You can now select lyrics provider from the lyrics panel
  * Fixed bug adding a label in the radio label editor
  * Click over the time can switch between time current track pos or
    time left
  * Added option in preferences to configure the silence detector. To
    automatically skip track when the sound level gets lower than the one
    you configure.
  * To view the large cover image you just need to put the mouse over the
    player cover image.
  * When you put the mouse over an image in the last.fm panel it will show 
    a larger image.
  * Added a Limiter to the sound output
  * Added a 10 band equalizer
  * Added a cache for last.fm queries and online images
  * Fixed crash in mpris when application send incomplete method calls
  * Fixed bug with library update when library paths changed
  * Allow to move items in playlists using dragging with mouse
  * Fixed bug with library paths. After remove a library path the files
    kept in the library.